# RuntimeStartup

./: .gitignore  .travis.yml  Makefile.am  PersonalityKit-RuntimeStartup-uninstalled.pc.in  README.md  configure.ac
M4/: rtsu-arch.m4  rtsu-buildflags.m4  rtsu-host.m4  rtsu-platform.m4  tal-system.m4
Tests/: .gitignore  Makefile.am  t-print-args.c  t-print-env.c  t-return-0.c  t-return-123.c  t-return-argc.c
Tests/lib/: Makefile.am  _exit.c  errno.c  main.c  write.c
